Fix topnav overflow issue

--- a/css/anzo_style.css
+++ b/css/anzo_style.css
@@ -99,6 +99,10 @@ div#profpic{
     }
 }
 
+.topnav {
+    overflow: hidden;
+}
+
 @media screen and (max-width: 750px) {
   .topnav {display: none;}
   .icon{
