--- a/css/imo_style.css
+++ b/css/imo_style.css
@@ -101,6 +101,10 @@ div#drops {
     }
 }
 
+.topnav {
+    overflow: hidden;
+}
+
 @media screen and (max-width: 750px) {
   .topnav {display: none;}
   .icon{
